@@ -96,9 +96,7 @@ static
 SCIP_DECL_BRANCHEXECLP(branchExeclpRyanFoster)
 {  /*lint --e{715}*/
    SCIP_PROBDATA* probdata;
-
    SCIP_Real** pairweights;
-
    SCIP_VAR** lpcands;
    SCIP_Real* lpcandsfrac;
    int nlpcands;
@@ -140,20 +138,21 @@ SCIP_DECL_BRANCHEXECLP(branchExeclpRyanFoster)
    SCIP_CALL( SCIPallocBufferArray(scip, &pairweights, nitems) );
    for( i = 0; i < nitems; ++i )
    {
-      SCIP_CALL( SCIPallocBufferArray(scip, &pairweights[i], nitems) ); /*lint !e866 */
-
-      for( j = 0; j < nitems; ++j )
-         pairweights[i][j] = 0.0;
+      SCIP_CALL( SCIPallocClearBufferArray(scip, &pairweights[i], i+1) ); /*lint !e866 */
    }
 
    /* get fractional LP candidates */
    SCIP_CALL( SCIPgetLPBranchCands(scip, &lpcands, NULL, &lpcandsfrac, NULL, &nlpcands, NULL) );
    assert(nlpcands > 0);
 
-   /* compute weigthts for each order pair */
+   /* compute weights for each order pair */
    for( v = 0; v < nlpcands; ++v )
    {
+      SCIP_Real solval;
+
       assert(lpcands[v] != NULL);
+
+      solval = lpcandsfrac[v];
 
       /* get variable data which contains the information to which constraints/items the variable belongs */
       vardata = SCIPvarGetData(lpcands[v]);
@@ -166,14 +165,18 @@ SCIP_DECL_BRANCHEXECLP(branchExeclpRyanFoster)
       for( i = 0; i < nconsids; ++i )
       {
          id1 = consids[i];
+
+         /* store the LP sum for single items in the diagonal */
+         pairweights[id1][id1] += solval;
+
+         /* update LP sums for all pairs of items */
          for( j = i+1; j < nconsids; ++j )
          {
             id2 = consids[j];
             assert(id1 < id2);
 
-            pairweights[id2][id1] += lpcandsfrac[v];
+            pairweights[id2][id1] += solval;
 
-            assert( SCIPisFeasLE(scip, pairweights[id2][id1], 1.0) );
             assert( SCIPisFeasGE(scip, pairweights[id2][id1], 0.0) );
          }
       }
@@ -186,12 +189,17 @@ SCIP_DECL_BRANCHEXECLP(branchExeclpRyanFoster)
 
    for( i = 0; i < nitems; ++i )
    {
-      for( j = 0; j < i+1; ++j )
+      for( j = 0; j < i; ++j )
       {
          value = MIN(pairweights[i][j], 1-pairweights[i][j]);
 
          if( bestvalue < value )
          {
+            /* there is no variable with (fractional) LP value > 0 that contains exactly one of the items */
+            if( SCIPisEQ(scip, pairweights[i][j], pairweights[i][i])
+               && SCIPisEQ(scip, pairweights[i][j], pairweights[j][j]) )
+               continue;
+
             bestvalue = value;
             id1 = j;
             id2 = i;
